--- a/frontend/src/styles/pages/BookDetailPage.scss
+++ b/frontend/src/styles/pages/BookDetailPage.scss
@@ -170,3 +170,25 @@ p {
   font-size: 16px;
   color: #666;
 }
+
+.custom-select {
+  width: 50%;
+  padding: 10px;
+  margin-right: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #fff;
+  font-size: 16px;
+  appearance: none;
+  cursor: pointer;
+}
+
+.custom-select:hover {
+  border-color: #888;
+}
+
+.custom-select:focus {
+  outline: none;
+  border-color: #007bff;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
