--- a/frontend/src/styles/pages/BooksPage.scss
+++ b/frontend/src/styles/pages/BooksPage.scss
@@ -19,8 +19,8 @@ body {
     margin-bottom: 40px;
 
     h1 {
-        color: #333;
-        margin-bottom: 15px;
+        color: #3498DB !important;
+        margin-bottom: 15px !important;
     }
 
     .header-image {
